Update JudgeFrontend and Judgecore(except x86_64,arm,risc-v)

--- a/JudgeBackend/CMakeLists.txt
+++ b/JudgeBackend/CMakeLists.txt
@@ -3,5 +3,6 @@ project(JudgeBackend)
 
 set(CMAKE_CXX_STANDARD 14)
 
-
-add_executable(JudgeCore main.cpp)
+add_library(Core JudgeCore.cpp Macros.h)
+add_executable(JudgeCore main.cpp Macros.h)
+target_link_libraries(JudgeCore Core)
